allow starting multiple workers

--- a/examples/python_api.ipynb
+++ b/examples/python_api.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite:////home/philip/.cache/ragna/ragna.db', queue_database_url='redis://127.0.0.1:6379', registered_source_storage_classes={}, registered_llm_classes={})"
+       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite:////home/philip/.cache/ragna/ragna.db', queue_database_url='redis://127.0.0.1:6379', registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_llm_classes={'Ragna/DemoLLM': <class 'ragna.llm._demo.RagnaDemoLlm'>})"
       ]
      },
      "execution_count": 3,
@@ -53,10 +53,9 @@
     }
    ],
    "source": [
-    "from ragna.core import Config\n",
+    "from ragna import demo_config, Config\n",
     "\n",
-    "config = Config()\n",
-    "config"
+    "demo_config"
    ]
   },
   {
@@ -79,30 +78,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20:22:34 Worker rq:worker:6f9db5f2392d4a8c9fd2684966f53ea5 started with PID 47562, version 1.15.1\n",
-      "20:22:34 Subscribing to channel rq:pubsub:6f9db5f2392d4a8c9fd2684966f53ea5\n",
-      "20:22:34 *** Listening on default...\n",
-      "20:22:34 Cleaning registries for queue: default\n",
-      "{\"event\": \"No registered components available\", \"timestamp\": \"2023-09-11T18:22:36.697954Z\", \"level\": \"warning\", \"pathname\": \"/home/philip/git/ora/ragna/core/_rag.py\", \"lineno\": 98}\n",
-      "{\"event\": \"No registered components available\", \"timestamp\": \"2023-09-11T18:22:36.777673Z\", \"level\": \"warning\", \"pathname\": \"/home/philip/git/ora/ragna/core/_rag.py\", \"lineno\": 98}\n",
-      "20:22:36 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95\\t\\x0b\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle...) (dddafab3-d374-4b75-9ccd-74979180079d)\n",
-      "20:22:36 default: Job OK (dddafab3-d374-4b75-9ccd-74979180079d)\n",
-      "20:22:36 Result is kept for 500 seconds\n",
-      "20:22:37 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95e\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle\\x9...) (a11d0f51-37b2-4420-b9ad-ba1ce34ddadb)\n",
-      "20:22:37 default: Job OK (a11d0f51-37b2-4420-b9ad-ba1ce34ddadb)\n",
-      "20:22:37 Result is kept for 500 seconds\n",
-      "20:22:37 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95\\xa3\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle...) (2cb399e9-ee08-4ee6-9872-0dfdcf321e4a)\n",
-      "20:22:37 default: Job OK (2cb399e9-ee08-4ee6-9872-0dfdcf321e4a)\n",
-      "20:22:37 Result is kept for 500 seconds\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"I'm just pretending to be an LLM, so I can't actually help with your prompt.\""
+       "'Ragna is an open-source RAG orchestration app. It is designed to help users manage and automate their RAG (Red, Amber, Green) status reporting process. Ragna allows users to easily track and update the status of various tasks or projects, and provides a visual representation of the overall progress. It is a useful tool for teams or individuals who need to regularly report on the status of their work.'"
       ]
      },
      "execution_count": 5,
@@ -114,13 +92,15 @@
     "from ragna.core import Rag\n",
     "from ragna.llm import RagnaDemoLlm\n",
     "from ragna.source_storage import RagnaDemoSourceStorage\n",
+    "from ragna.llm import OpenaiGpt35Turbo16kLlm, OpenaiGpt4Llm\n",
+    "from ragna.source_storage import ChromaSourceStorage\n",
     "\n",
-    "rag = Rag(config, start_ragna_worker=True)\n",
+    "rag = Rag(demo_config, start_ragna_worker=4)\n",
     "\n",
     "chat = await rag.start_new_chat(\n",
     "    documents=[document_path],\n",
-    "    source_storage=RagnaDemoSourceStorage,\n",
-    "    llm=RagnaDemoLlm,\n",
+    "    source_storage=ChromaSourceStorage,\n",
+    "    llm=OpenaiGpt35Turbo16kLlm,\n",
     ")\n",
     "\n",
     "prompt = \"What is Ragna?\"\n",
@@ -137,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f81e2d33c40>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f81e2d33cc0>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f22e1557740>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f22e15576c0>}\n"
      ]
     }
    ],
@@ -175,32 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████| 2/2 [00:07<00:00,  3.90s/it]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20:22:38 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95\\xe8\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle...) (ff34f99d-6795-44c3-ba9a-cc435ac94610)\n",
-      "20:22:38 default: Job OK (ff34f99d-6795-44c3-ba9a-cc435ac94610)\n",
-      "20:22:38 Result is kept for 500 seconds\n",
-      "20:22:38 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95\\xe8\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle...) (07ce88b5-73b3-47dc-bac4-6134e000a6ed)\n",
-      "20:22:39 default: Job OK (07ce88b5-73b3-47dc-bac4-6134e000a6ed)\n",
-      "20:22:39 Result is kept for 500 seconds\n",
-      "20:22:39 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95B\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle\\x9...) (4f534fde-3a2d-4942-be0f-8eab2fa10b7a)\n",
-      "20:22:39 default: Job OK (4f534fde-3a2d-4942-be0f-8eab2fa10b7a)\n",
-      "20:22:39 Result is kept for 500 seconds\n",
-      "20:22:39 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95B\\n\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle\\x9...) (a438f35a-3cfa-4e9a-ac3a-6457930d4d31)\n",
-      "20:22:39 default: Job OK (a438f35a-3cfa-4e9a-ac3a-6457930d4d31)\n",
-      "20:22:39 Result is kept for 500 seconds\n",
-      "20:22:39 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95.\\x0b\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpickle\\...) (e317ac72-54b9-4953-89e1-5288cf7fca45)\n",
-      "20:22:42 default: Job OK (e317ac72-54b9-4953-89e1-5288cf7fca45)\n",
-      "20:22:42 Result is kept for 500 seconds\n",
-      "20:22:42 default: ragna.core._queue.Worker._execute_job(b\"\\x80\\x05\\x95\\x19\\x0b\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x17cloudpickle.cloudpick...) (c0b3083e-54fb-4600-8843-005076d1c823)\n",
-      "20:22:47 default: Job OK (c0b3083e-54fb-4600-8843-005076d1c823)\n",
-      "20:22:47 Result is kept for 500 seconds\n",
       "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
       "                                         'orchestration app. It is designed to '\n",
       "                                         'help users manage and automate their '\n",
@@ -215,15 +184,25 @@
       "                                         'status of their work.',\n",
       " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG (Retrieve and '\n",
       "                             \"Generate) orchestration app. It's a tool that \"\n",
-      "                             'helps in managing and orchestrating the process '\n",
-      "                             'of retrieving and generating data. Being '\n",
+      "                             'helps manage and coordinate the process of '\n",
+      "                             'retrieving and generating data. Being '\n",
       "                             'open-source, it allows developers to modify and '\n",
-      "                             'distribute the software to cater to their needs.'}\n"
+      "                             'distribute the software to meet their specific '\n",
+      "                             'needs.'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "results = dict(zip(experiments.keys(), await asyncio.gather(*experiments.values())))\n",
+    "from tqdm.asyncio import tqdm\n",
+    "\n",
+    "results = dict(zip(experiments.keys(), await tqdm.gather(*experiments.values())))\n",
     "\n",
     "pprint(results)"
    ]
