implement Chat as context manager

--- a/examples/python_api.ipynb
+++ b/examples/python_api.ipynb
@@ -65,7 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_path = \"demo_document.txt\"\n",
+    "from pathlib import Path\n",
+    "\n",
+    "document_path = Path.cwd() / \"demo_document.txt\"\n",
     "\n",
     "with open(document_path, \"w\") as file:\n",
     "    file.write(\"Ragna is an open-source RAG orchestration app\\n\")"
@@ -76,18 +78,7 @@
    "execution_count": 5,
    "id": "818ff37c-d693-44b2-9d56-104eb2d86f59",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Ragna is an open-source RAG orchestration app. It is designed to help users manage and automate their RAG (Red, Amber, Green) status reporting process. Ragna allows users to easily track and update the status of various tasks or projects, and provides a visual representation of the overall progress. It is a useful tool for teams or individuals who need to regularly report on the status of their work.'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ragna.core import Rag\n",
     "from ragna.llm import RagnaDemoLlm\n",
@@ -95,21 +86,21 @@
     "from ragna.llm import OpenaiGpt35Turbo16kLlm, OpenaiGpt4Llm\n",
     "from ragna.source_storage import ChromaSourceStorage\n",
     "\n",
-    "rag = Rag(demo_config, start_ragna_worker=4)\n",
+    "rag = Rag(demo_config)\n",
     "\n",
-    "chat = await rag.start_new_chat(\n",
+    "prompt = \"What is Ragna?\"\n",
+    "\n",
+    "async with await rag.new_chat(\n",
     "    documents=[document_path],\n",
     "    source_storage=ChromaSourceStorage,\n",
     "    llm=OpenaiGpt35Turbo16kLlm,\n",
-    ")\n",
-    "\n",
-    "prompt = \"What is Ragna?\"\n",
-    "await chat.answer(prompt)"
+    ") as chat:\n",
+    "    print(await chat.answer(prompt))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
    "outputs": [
@@ -117,14 +108,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f22e1557740>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f22e15576c0>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7faa4f393b40>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7faa4f393a40>}\n"
      ]
     }
    ],
    "source": [
-    "import itertools\n",
     "import asyncio\n",
+    "import itertools\n",
+    "import time\n",
     "from pprint import pprint\n",
     "\n",
     "from ragna.llm import OpenaiGpt35Turbo16kLlm, OpenaiGpt4Llm\n",
@@ -135,12 +127,17 @@
     "\n",
     "\n",
     "async def answer_prompt(source_storage, llm):\n",
-    "    chat = await rag.start_new_chat(\n",
+    "    start = time.time()\n",
+    "    async with await rag.new_chat(\n",
     "        documents=[document_path],\n",
     "        source_storage=source_storage,\n",
     "        llm=llm,\n",
+    "    ) as chat:\n",
+    "        answer = await chat.answer(prompt)\n",
+    "    print(\n",
+    "        f\"{source_storage.display_name()} / {llm.display_name()}: {time.time() - start:.1f}s\"\n",
     "    )\n",
-    "    return await chat.answer(prompt)\n",
+    "    return answer\n",
     "\n",
     "\n",
     "experiments = {\n",
@@ -155,21 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████| 2/2 [00:07<00:00,  3.90s/it]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Chroma / OpenAI/gpt-3.5-turbo-16k: 5.8s\n",
+      "Chroma / OpenAI/gpt-4: 10.0s\n",
       "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
       "                                         'orchestration app. It is designed to '\n",
       "                                         'help users manage and automate their '\n",
@@ -182,30 +174,29 @@
       "                                         'useful tool for teams or individuals '\n",
       "                                         'who need to regularly report on the '\n",
       "                                         'status of their work.',\n",
-      " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG (Retrieve and '\n",
-      "                             \"Generate) orchestration app. It's a tool that \"\n",
-      "                             'helps manage and coordinate the process of '\n",
-      "                             'retrieving and generating data. Being '\n",
-      "                             'open-source, it allows developers to modify and '\n",
-      "                             'distribute the software to meet their specific '\n",
-      "                             'needs.'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app. '\n",
+      "                             'RAG stands for Retrieval-Augmented Generation, a '\n",
+      "                             'method used in natural language processing. The '\n",
+      "                             'app is designed to help manage and orchestrate '\n",
+      "                             'these processes. Being open-source, it allows '\n",
+      "                             'developers to modify and distribute the software '\n",
+      "                             'to cater to their specific needs.'}\n"
      ]
     }
    ],
    "source": [
-    "from tqdm.asyncio import tqdm\n",
-    "\n",
-    "results = dict(zip(experiments.keys(), await tqdm.gather(*experiments.values())))\n",
+    "results = dict(zip(experiments.keys(), await asyncio.gather(*experiments.values())))\n",
     "\n",
     "pprint(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a687d54-91e1-441b-9e72-7bce18e00baf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
